<resources>
    <string name="app_name">Meeting Room</string>
    <string name="et_login_username">Enter Username</string>
    <string name="et_login_password">Enter Password</string>
    <string name="btn_login_user">LOGIN</string>
    <string name="tv_not_registered">Not Registered?</string>
    <string name="btn_register_intent">Register</string>
    <string name="et_register_username">Enter Username</string>
    <string name="et_register_password">Enter Password</string>
    <string name="tv_already_registered">Already Registered?</string>
    <string name="btn_register_user">Register</string>
    <string name="btn_login_intent">Login</string>
    <string name="et_confirm_password">Confirm Password</string>
    <string name="btn_create_user">Create</string>
    <string name="btn_delete_user">Delete</string>
    <string name="btn_update_user">Update</string>
    <string name="tv_user_menu">User Menu</string>
    <string name="tv_room_menu">Meeting Room Menu</string>
    <string name="btn_create_room">Create Room</string>
    <string name="btn_delete_room">Delete Room</string>
    <string name="btn_update_room">Update Room</string>
    <string name="tv_booking_menu">Booking Menu</string>
    <string name="btn_create_booking">Create Booking</string>
    <string name="btn_delete_booking">Delete Booking</string>
    <string name="btn_update_booking">Update Booking</string>
    <string name="btn_user_to_room_menu">Room Menu</string>
    <string name="btn_user_to_booking_menu">Booking Menu</string>
    <string name="btn_booking_to_user_menu">User Menu</string>
    <string name="btn_booking_to_room_menu">Room Menu</string>
    <string name="btn_room_to_user_menu">User Menu</string>
    <string name="btn_room_to_booking_menu">Booking Menu</string>
    <string name="et_dialogue_username">Username</string>
    <string name="et_dialogue_password">Password</string>
    <string name="no_user">\"No users found\"</string>
    <string name="et_dialogue_id">User ID</string>
    <string name="tv_dialogue_user">User Update and Delete Menu</string>
    <string name="lv_tv_user_id_title">ID</string>
    <string name="lv_tv_username_title">User Names</string>
    <string name="lv_tv_room_id_title">Room ID</string>
    <string name="lv_tv_room_name_title">Room Name</string>
    <string name="tv_dialogue_room">Meeting Room Update and Delete Menu</string>
    <string name="et_create_room_name">Room Name</string>
    <string name="et_create_room_location">Room Location</string>
    <string name="et_create_password">Password</string>
    <string name="et_create_room_available">Room Availability</string>
    <string name="et_create_room_equipment">Room Equipment</string>
    <string name="lv_tv_room_location_title">Room Location</string>
    <string name="lv_tv_room_equipment_title">Room Equipment</string>
    <string name="lv_tv_room_availability_title">Room Availability</string>
    <string name="et_edit_room_equipment">Room Equipment</string>
    <string name="et_edit_room_available">Room Available</string>
    <string name="et_edit_room_location">Room Location</string>
    <string name="et_edit_room_name">Room Name</string>
    <string name="et_edit_room_id">Room ID</string>
    <string name="tv_dialogue_edit_room">Meeting Room Update and Delete Menu</string>
    <string name="tv_dialogue_create_room">Create Room</string>
    <string name="tv_edit_booking">Booking Update and Delete Menu</string>
    <string name="tv_edit_booking_start_time_title">Meeting Start Time</string>
    <string name="tv_edit_booking_end_time_title">Meeting End Time</string>
    <string name="lv_tv_booking_id_title">Booking ID</string>
    <string name="lv_tv_booking_username_title">Username</string>
    <string name="lv_tv_booking_room_title">Meeting Room</string>
    <string name="lv_tv_booking_date_title">Meeting Date</string>
    <string name="lv_tv_booking_start_time_title">Start Time</string>
    <string name="lv_tv_booking_end_time_title">End Time</string>
    <string name="tv_create_booking_start_time_title">Start Time</string>
    <string name="tv_create_booking_end_time_title">End Time</string>
    <string name="tv_create_booking">Create Booking Menu</string>

</resources>