<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4AFF1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_dialogue_user"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#E8DDA3"
        android:gravity="center"
        android:text="@string/tv_dialogue_user"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_dialogue_user_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/tv_dialogue_user"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:hint="@string/et_dialogue_id"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_dialogue_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_dialogue_user_id"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:hint="@string/et_dialogue_username"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_dialogue_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_dialogue_username"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:hint="@string/et_dialogue_password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_dialogue_password"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_delete_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete_user"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_update_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/btn_update_user"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>