<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".UserActivities.MainActivity">

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@android:color/white"
        android:focusable="true"
        android:hint="@string/et_register_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_login_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:hint="@string/et_login_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_login_user"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/btn_login_user" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/btn_login_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/tv_not_registered"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:clickable="false"
            android:paddingTop="8dp"
            android:text="@string/tv_not_registered"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textIsSelectable="false"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_register_intent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_orange_light"
            android:text="@string/btn_register_intent" />
    </LinearLayout>

</RelativeLayout>