<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivities.BookingActivity">

    <FrameLayout
        android:id="@+id/fl_booking_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_orange_light" />

    <TextView
        android:id="@+id/tv_booking_frame"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:paddingTop="5dp"
        android:text="@string/tv_booking_menu"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_create_booking"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_booking_frame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btn_create_booking"
        android:textAllCaps="false" />

    <ListView
        android:id="@+id/lv_booking_data"
        android:layout_width="340dp"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_create_booking"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="80dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_booking_to_user_menu"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_light"
            android:text="@string/btn_booking_to_user_menu"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_booking_to_room_menu"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light"
            android:text="@string/btn_booking_to_room_menu"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</RelativeLayout>