<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomActivities.RoomActivity">

    <FrameLayout
        android:id="@+id/fl_room_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_green_light" />

    <TextView
        android:id="@+id/tv_room_frame"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:paddingTop="5dp"
        android:text="@string/tv_room_menu"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_create_room"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_room_frame"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_create_room"
        android:textAllCaps="false" />

    <ListView
        android:id="@+id/lv_room_data"
        android:layout_width="340dp"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_create_room"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="80dp"
        android:background="@android:color/white"
        tools:listitem="@layout/room_list_view"/>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_room_to_user_menu"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light"
            android:text="@string/btn_room_to_user_menu"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_room_to_booking_menu"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_orange_light"
            android:text="@string/btn_room_to_booking_menu"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>