<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="1dp"
    android:layout_marginTop="1dp"
    android:layout_marginEnd="1dp"
    android:layout_marginBottom="1dp"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/lv_tv_booking_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/lv_tv_booking_id_title"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lv_tv_booking_username_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/lv_tv_booking_username_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lv_tv_booking_room_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/lv_tv_booking_room_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lv_tv_booking_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/lv_tv_booking_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white" />


    <TextView
        android:id="@+id/lv_tv_booking_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/lv_tv_booking_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/lv_tv_booking_date_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lv_tv_booking_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/lv_tv_booking_start_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/lv_tv_booking_start_time_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lv_tv_booking_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/lv_tv_booking_end_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="1dp"
        android:text="@string/lv_tv_booking_end_time_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lv_tv_booking_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white" />

</RelativeLayout>