<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="1dp"
    android:layout_marginTop="1dp"
    android:layout_marginEnd="1dp"
    android:layout_marginBottom="1dp"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/lv_tv_room_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/lv_tv_room_id_title"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lv_tv_room_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv_tv_room_id_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:background="@android:color/white"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/lv_tv_room_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/lv_tv_room_name_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lv_tv_room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv_tv_room_name_title"
        android:layout_marginStart="70dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/lv_tv_room_location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/lv_tv_room_location_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lv_tv_room_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv_tv_room_name_title"
        android:layout_marginStart="200dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/lv_tv_room_equipment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv_tv_room_name"
        android:layout_marginStart="70dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/lv_tv_room_equipment_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lv_tv_room_equipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv_tv_room_equipment_title"
        android:layout_marginStart="70dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/lv_tv_room_availability_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv_tv_room_location"
        android:layout_marginStart="200dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/lv_tv_room_availability_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lv_tv_room_availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv_tv_room_availability_title"
        android:layout_marginStart="200dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white" />

</RelativeLayout>